# generated-crosswords

./: .gitignore  .prettierignore  Makefile  README.md  archive.html  archive.js  crossword.css  crossword.html  crossword.js  index.html  mini-2014-08-29.html  mini-statistics.html  package.json  statistics.html  statistics.js
.cursor/rules/: nginx-redirects.mdc
crossword-generator/: README.md  archive.js  crossword.css  crossword.js  crossword_generator.py  extract_clues.py  generate_crossword.js  master_clues.json  pyproject.toml  statistics.js
crossword-generator/css/: archive.css  base.css  clues.css  feedback-toggle.css  layout.css  leaderboard.css  mobile-clue-navigator.css  overlay.css  puzzle-navigation.css  puzzle.css  statistics.css  timer.css
css/: animations.css  archive.css  base.css  clues.css  feedback-toggle.css  layout.css  leaderboard.css  mobile-clue-navigator.css  overlay.css  puzzle-navigation.css  puzzle.css  statistics.css  timer.css
scoretracker/: README.md  app.py  edit_time.py  pyproject.toml  scoretracker.service
